<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/dialog"
    tools:context=".DialogConfirmationFragment">

        <TextView
            android:id="@+id/tv_title_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/example_title_dialogf"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_question_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/example_question_dialog"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_dialog"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="@id/tv_title_dialog"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_dialog" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_approved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_question_dialog"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_declined"
            app:layout_constraintTop_toTopOf="@+id/btn_declined" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_declined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/red"
            android:text="@string/decline"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_approved"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tv_question_dialog"
            app:layout_constraintTop_toBottomOf="@+id/tv_question_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>